----------
v4.2.1-git
----------



------
v4.2.0
------

[jan] Fix fatal error if importing CSV data with date fields.


---------
v4.2.0RC2
---------

[mjr] Fix another regression with exporting photos in vCard when we are
      ignoring empty values.


---------
v4.2.0RC1
---------

[mjr] Fix regression with exporting photos in vCard when we are ignoring empty
      values.
[jan] Update Polish translation (Maciej Uhlig <maciej.uhlig@us.edu.pl>).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


-----------
v4.2.0beta1
-----------

[jan] Export composite attributes to vCard too.


------------
v4.2.0alpha1
------------

[jan] Don't export binary fields to CSV/TSV.
[mms] Fix search in Facebook driver.
[jan] Add script to import contacts from Open-Xchange.
[jan] Don't remove missing contacts from distributions lists in Kolab backends
      (Bug #12861).
[jan] Support binary fields (photos) in Kolab backends.
[mjr] Fix importing certain vCards to sources only using the 'email' attribute
      (Bug #12955).
[jan] Make shares table compatible with Oracle.
[jan] Export free/busy URL to vCard (Request #12915).
[mjr] Fix listTimeObjects API when format_in attribute parameter is changed
      from default (Bug #11891).
[mjr] Add API support for supporting multiple addressbooks via ActiveSync.
[jan] Remember currently open tab when switching or saving contact views
      (Request #12609).
[jan] Replace categories with tags (Request #9544).


------
v4.1.5
------

[mjr] Fix pagination of search results (Bug #13047).
[mjr] Don't output empty properties for CardDAV requests (Bug #12782).
[jan] Update Korean translation (Deokgon Kim <dgkim@dgkim.net>).
[jan] Fix portal serach block response when no contacts have been found
      (dulinux <lfbm.andamentos@gmail.com>, Bug #13044).


------
v4.1.4
------

[jan] Fix importing vCard fields with lowercase TYPE attributes (Bug #13006).
[jan] Store full name in Kolab contacts.