@@ -2,6 +2,8 @@
 v4.2.1-git
 ----------
 
+[mjr] Add missing API support for searchTags API (Bug #13362).
+[mjr] Fix issue that caused contacts to be tagged with a broken username.
 
 
 ------
